PPT: Improved access to image names.

* It seems to be normal for MS Office 2003 that the MD4 digest of a BLIP
  (specifies the unique identifier of the pixel data in the BLIP) in blipStore
  and OfficeArtDggContainer DOES NOT match.  This means that we can't locate
  the picture for a Picture Shape in the blipStore b y its MD4 digest.

* Using stream offsets to locate the picture.

* Re-save in MS Office 2007 updates the MD4 digests in OfficeArtDggContainer.
  Tests showed that MD4 digests in blipStore were always up2date.

BUG:247633